Add pic folder with images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       font-weight: bold;
     }
     .hero-image {
-      background: url('s..jpg') no-repeat center center/cover;
+      background: url('pic/s..jpg') no-repeat center center/cover;
       height: 400px;
       display: flex;
       justify-content: center;
@@ -133,7 +133,7 @@
     <!-- การ์ดข่าว 1 -->
     <div class="col-md-4 mb-4">
       <div class="card">
-        <img src="Ronnie.jpg" class="card-img-top" alt="Ronnie O'Sullivan">
+        <img src="pic/Ronnie.jpg" class="card-img-top" alt="Ronnie O'Sullivan">
         <div class="card-body">
           <h5 class="card-title">Ronnie O'Sullivan คัมแบ็ค!</h5>
           <p class="card-text">ตำนานสนุกเกอร์กลับมาสร้างเสียงฮือฮาอีกครั้งในรายการล่าสุด พร้อมโชว์ฟอร์มเหนือชั้นให้แฟนๆ ได้ตื่นเต้น</p>
@@ -145,7 +145,7 @@
     <!-- การ์ดข่าว 2 -->
     <div class="col-md-4 mb-4">
       <div class="card">
-        <img src="pro.jpg" class="card-img-top" alt="การแข่งขันโลก">
+        <img src="pic/pro.jpg" class="card-img-top" alt="การแข่งขันโลก">
         <div class="card-body">
           <h5 class="card-title">ศึกสนุกเกอร์ชิงแชมป์โลก 2025</h5>
           <p class="card-text">เหล่ามือวางอันดับโลกเตรียมลงสนามล่าแชมป์ในศึกใหญ่ที่สุดแห่งปี พร้อมตารางการแข่งขันเต็มรูปแบบ</p>
@@ -157,7 +157,7 @@
     <!-- การ์ดข่าว 3 -->
     <div class="col-md-4 mb-4">
       <div class="card">
-        <img src="champ.jpg" class="card-img-top" alt="ตารางการแข่งขัน">
+        <img src="pic/champ.jpg" class="card-img-top" alt="ตารางการแข่งขัน">
         <div class="card-body">
           <h5 class="card-title">อัปเดตตารางการแข่งขัน</h5>
           <p class="card-text">แฟนๆ สนุกเกอร์ห้ามพลาด! เรารวมตารางแข่งขันรายการสำคัญทั้งในและต่างประเทศไว้ให้ครบที่นี่</p>
